--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,15 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    env_file: .docker-env
     volumes:
        - .:/usr/src/app:cached
     ports:
       - '8000:8000'
     depends_on:
       - db
+    links:
+     - db
     command: pipenv run python manage.py runserver 0.0.0.0:8000
   db:
     image: mysql:5.7
