--- a/package.json
+++ b/package.json
@@ -8,10 +8,26 @@
     "dev": "webpack -w"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "babel-loader": "^8.0.0-beta",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-vue": "^4.5.0",
+    "file-loader": "^1.1.11",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "vue-loader": "^15.2.4",
+    "vue-style-loader": "^4.1.0",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.9.1",
     "webpack-bundle-tracker": "^0.3.0"
   },
   "dependencies": {
+    "element-ui": "^2.4.1",
     "vue": "^2.5.16",
     "webpack-cli": "^2.1.4"
   }
