--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.49",
     "@babel/preset-env": "^7.0.0-beta.49",
+    "@babel/preset-es2017": "^7.0.0-beta.51",
     "babel-loader": "^8.0.0-beta",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
@@ -27,8 +28,13 @@
     "webpack-bundle-tracker": "^0.3.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "element-ui": "^2.4.1",
+    "js-cookie": "^2.2.0",
     "vue": "^2.5.16",
+    "vue-markdown": "^2.2.4",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
     "webpack-cli": "^2.1.4"
   }
 }
