--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.49",
-    "@babel/preset-env": "^7.0.0-beta.49",
-    "@babel/preset-es2017": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-rc.3",
     "babel-loader": "^8.0.0-beta",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
